--- a/site/Template - About/index.html
+++ b/site/Template - About/index.html
@@ -117,17 +117,15 @@
 
 <h6 id="checklist-for-this-section"><em>Checklist For This Section:</em></h6>
 <ul>
-<li>Use this page to give credit and provide information<ul>
+<li>Use this page to give credit and provide information.</li>
 <li>Information about the team who created</li>
-<li>Who is Maintianing</li>
+<li>Who is Maintaining</li>
 <li>Who is Contributing</li>
-<li>WHo is Funding</li>
+<li>Who is Funding</li>
 <li>Pricing</li>
 <li>Style Guide/Branding info</li>
 <li>Where to place credits</li>
-<li>Other Projects by the team for marketing purpose</li>
-</ul>
-</li>
+<li>Other Projects by the team for marketing purposes</li>
 </ul>
 <hr />
 <h3 id="toolapp">Tool/App</h3>
@@ -155,7 +153,7 @@
 </ul>
 </li>
 <li>
-<h5 id="contributros">Contributros</h5>
+<h5 id="contributors">Contributors</h5>
 <ul>
 <li>Names</li>
 <li>Picture</li>
@@ -173,36 +171,36 @@
 </ul>
 </li>
 </ul>
-<h3 id="acknowledgements">Acknowledgements</h3>
+<h3 id="acknowledgments">Acknowledgments</h3>
 <ul>
 <li>Who do you need to acknowledge and thank</li>
 <li>Any grant support</li>
-<li>Any liscence acknowlegements</li>
+<li>Any license acknowledgments</li>
 <li>Any Sponsors</li>
 <li>Mom, Dad, Spouse, Kids, Testers, Labmates, Coffee Shop, etc</li>
 </ul>
 <h3 id="funding-info">Funding Info</h3>
 <ul>
-<li>What funding do you neeed to disclose</li>
+<li>What funding do you need to disclose</li>
 <li>How about grants</li>
 <li>Other people</li>
 </ul>
 <h3 id="price">Price</h3>
 <ul>
-<li>Free?, Freeium?, Purchase? Subscription, Single Purchasee, Upgrades</li>
+<li>Free?, Freemium? Purchase? Subscription, Single Purchase, Upgrades</li>
 <li>If free is this forever</li>
 </ul>
 <h3 id="style-guide-brand-book">Style Guide (Brand Book)</h3>
 <ul>
 <li><a href="../Template%20-%20Style%20Guide/">Style Guide / Brand Book</a></li>
-<li>A Style Guide also can be known as a brand book is something useful for the creators to establish prior to working on a project</li>
-<li>This may be something that is not shared with the end user or maybe some parts are shared </li>
+<li>A Style Guide, also can be known as a brand book, is something useful for the creators to establish before working on a project</li>
+<li>This Guide may be something that is not shared with the end user, or maybe some parts are shared</li>
 </ul>
 <h3 id="any-other-credits">Any Other Credits</h3>
-<h3 id="liscence">Liscence</h3>
+<h3 id="license">License</h3>
 <ul>
-<li>How is code liscenced to users</li>
-<li>Any acknowledgements to other liscene products/</li>
+<li>How is code licensed to users</li>
+<li>Any acknowledgments to other license products</li>
 </ul>
 <h3 id="other-appstool-by-creator">Other Apps/Tool by Creator</h3>
 <ul>
