--- a/site/Template - FAQ/index.html
+++ b/site/Template - FAQ/index.html
@@ -118,15 +118,18 @@
 <hr />
 <h6 id="checklist-for-this-section"><em>Checklist For This Section:</em></h6>
 <ul>
-<li>Review Getting Starteed Guide and Reference Guide - Do you need a FAQ</li>
-<li>To improve organization use headers and group similar questions</li>
-<li>If adding FAQ focus on useful features, what makes Project Cool, User Questions<ul>
-<li>Note this items should also be covered in Getting Started Guide and Reference</li>
+<li>Review Getting Started Guide and Reference Guide <ul>
+<li>Do you need a FAQ</li>
 </ul>
 </li>
-<li>Items to possible inclued<ul>
+<li>To improve organization, use headers, and group similar questions</li>
+<li>If adding FAQ focus on useful features, what makes Project Cool, User Questions<ul>
+<li>To improve organization, use headers, and group similar questions</li>
+</ul>
+</li>
+<li>Items to possibly include<ul>
 <li>FAQ</li>
-<li>Cheatsheets</li>
+<li>Cheat Sheets</li>
 <li>Videos</li>
 <li>Forum</li>
 <li>Knowledge Base</li>
@@ -137,42 +140,42 @@
 <h5 id="things-to-consider">Things To Consider</h5>
 <h6 id="faq">FAQ</h6>
 <ul>
-<li>Do you really need as a stand alone page?<ul>
-<li>This information should be in Getting Start aand Reference Guide</li>
+<li>Do you need a stand-alone page?<ul>
+<li>This information should be in Getting Start and Reference Guide</li>
 </ul>
 </li>
-<li>Use Headers to enable scanning (H1 H2 H3 etc)</li>
-<li>Group Quesstions and Topics</li>
-<li>Are they really frequently asked questions or just something you want to highlight</li>
+<li>Use Headers to enable scanning (H1, H2, H3, etc.)</li>
+<li>Group Questions and Topics</li>
+<li>Are they frequently asked questions or just something you want to highlight</li>
 <li>Use as a last resources</li>
-<li>Use the lanuage of your end user when writting  - avoid jargon</li>
+<li>Use the language of your end-user when writing — avoid jargon</li>
 <li>Use visuals when possible</li>
-<li>Inclued the ability to search</li>
+<li>Included the ability to search</li>
 <li>Keep it focused</li>
-<li>Do not use as a dumping ground for content you don't know where to place</li>
+<li>Do not use it as a dumping ground for content you don't know where to place</li>
 </ul>
-<h6 id="cheatsheets">Cheatsheets</h6>
+<h6 id="cheat-sheets">Cheat Sheets</h6>
 <ul>
-<li>Cheatsheets should be added to Getting Started and Reference Guide</li>
-<li>If Project has items that are handy but tough to keep track of a cheatsheet may be helpful</li>
-<li>Cheatsheets are a short reference guide 1 -2 pages that looks  pleasing</li>
+<li>Cheat Sheet should be added to Getting Started and Reference Guide</li>
+<li>If Project has items that are handy but tough to keep track of, a cheat sheet may be helpful</li>
+<li>Cheat Sheets are a short reference guide 1 – 2 pages that looks pleasing</li>
 <li>Highlights the most commonly used/most helpful items</li>
 <li>Good Resources:<ul>
-<li>RStudio’s <a href="https://www.rstudio.com/resources/cheatsheets/">Cheatsheets Example</a> </li>
-<li>Overleaf <a href="https://www.overleaf.com/gallery/tagged/cheat-sheet">Template Cheatsheets</a></li>
-<li>Figma <a href="https://www.figma.com/community/search?model_type=hub_files&amp;q=cheat%20sheets&amp;fuid=989216865006175239">Template Cheatsheets</a></li>
+<li>RStudio’s <a href="https://www.rstudio.com/resources/cheatsheets/">Cheat Sheets Example</a> </li>
+<li>Overleaf <a href="https://www.overleaf.com/gallery/tagged/cheat-sheet">Template Cheat Sheets</a></li>
+<li>Figma <a href="https://www.figma.com/community/search?model_type=hub_files&amp;q=cheat%20sheets&amp;fuid=989216865006175239">Template Cheat Sheets</a></li>
 </ul>
 </li>
 </ul>
 <h6 id="videos">Videos</h6>
 <ul>
 <li>If Project has a GUI can be very useful</li>
-<li>Not scannable, so don't make main source of info</li>
-<li>Useful for introducing basic concepts</li>
+<li>Not scannable, so don't make the primary source of info</li>
+<li>Helpful in for introducing basic concepts</li>
 <li>
-<p>Users who like visual typically like video, but not all users are visual learners </p>
+<p>Users who like visuals typically like video, but not all users are visual learners</p>
 <ul>
-<li>Learning Sytles <ul>
+<li>Learning Styles <ul>
 <li>Visual</li>
 <li>Auditory</li>
 <li>Kinesthetic</li>
@@ -195,11 +198,11 @@
 </ul>
 <h6 id="forumsknowledge-base">Forums/Knowledge Base</h6>
 <ul>
-<li>A good way to keep public records of questions and answers</li>
-<li>Forums are mostly useful for Projects with a big user base or having trouble keeting up with inquires</li>
+<li>An excellent way to keep public records of questions and answers</li>
+<li>Forums are primarily helpful for Projects with a significant user base or having trouble keeping up with inquires</li>
 <li>Allows advanced users to help answer questions of new users </li>
 <li>Make this Knowledge Base searchable </li>
-<li>Can host on your own or use a slack channel or discourse or other options</li>
+<li>Can host on your own or use a Slack channel or discourse or other options</li>
 <li>Good Resources:<ul>
 <li><a href="https://herothemes.com/blog/best-knowledge-base-software/">Knowledge Base Options</a> </li>
 <li><a href="https://geekflare.com/online-community-software/">Building an Online Community</a></li>
@@ -207,9 +210,9 @@
 </ul>
 </li>
 </ul>
-<h2 id="accessiblity">Accessiblity</h2>
+<h2 id="accessibility">Accessibility</h2>
 <ul>
-<li><a href="../Template%20-%20Accessibility%20Information/">Acccessiblity</a></li>
+<li><a href="../Template%20-%20Accessibility%20Information/">Accessibility</a></li>
 </ul>
 <hr />
 <p><em>Add Your Contact Information</em>
