--- a/site/Template - Feedback/index.html
+++ b/site/Template - Feedback/index.html
@@ -119,8 +119,8 @@
 <h6 id="checklist-for-this-section"><em>Checklist For This Section:</em></h6>
 <ul>
 <li>The user is given a clear avenue of where to direct questions or report bugs</li>
-<li>Mechanism is in place to allow for you to respond to feedback</li>
-<li>Do you want to run usablity testing interview, useful in design aand testing of the Project</li>
+<li>The mechanism is in place to allow you to respond to feedback</li>
+<li>Do you want to run a usability testing interview, useful in the design and testing of the Project</li>
 </ul>
 <hr />
 <h6 id="where">Where</h6>
@@ -128,25 +128,25 @@
 <li><a href="https://www.google.com/forms/about/">Google forms</a></li>
 <li>Contact Form In Tool/App</li>
 <li>Contact Form On Website</li>
-<li>Have page in user documnentation or have the link in navigation go to google form in yml</li>
-<li>Direct users to file a such as <a href="https://docs.github.com/en/github/managing-your-work-on-github/about-issues">GitHub issue</a></li>
+<li>Have a page in the user documentation or have the link in navigation go to a Google form in yml</li>
+<li>Direct users to file a such as <a href="https://docs.github.com/en/github/managing-your-work-on-github/about-issues">GitHub issue</a></li>
 <li>Slack channel</li>
-<li>Discourse channel</li>
+<li>Discord channel</li>
 </ul>
 <hr />
 <h6 id="support">Support</h6>
 <ul>
 <li>How Handling Support</li>
 <li>Do I want a send file button</li>
-<li>Do I want to make restore point</li>
-<li>Send to one person or an email for Project that team has access</li>
-<li>Do want the support to be in a forum or Slack/Discource like tool</li>
-<li>Do you want to list service level agreement ie will hear back in week or 24 hr</li>
+<li>Do I want to make a restore point</li>
+<li>Send to one person or an email for Project that the team has access</li>
+<li>Do want the support to be in a forum or Slack/Discord-like tool</li>
+<li>Do you want to list the service level agreement i.e., will hear back in a week or 24 hr</li>
 </ul>
 <hr />
-<h6 id="potiental-questions-for-a-user-feedback-fork">Potiental Questions for a User Feedback Fork</h6>
+<h6 id="potential-questions-for-a-user-feedback-fork">Potential Questions for a User Feedback Fork</h6>
 <ul>
-<li>Select a tool to contact your users (i.e. google forms )</li>
+<li>Select a tool to contact your users (i.e., google forms)</li>
 <li><a href="https://docs.google.com/forms/d/1erbaH2k8cra0A2GB6W9Da0tqJCT41ZPlCmHXpKRcMLk/edit?usp=sharing">Example Google Form</a></li>
 </ul>
 <h6 id="questions-from-above-link">Questions From Above Link</h6>
@@ -165,7 +165,7 @@
 <li>Moderately relevant</li>
 <li>Very relevant</li>
 <li>Extremely relevant</li>
-<li>Other</li>
+<li>Other?</li>
 </ul>
 </li>
 <li>
@@ -192,20 +192,20 @@
 </ul>
 </li>
 <li>
-<p>If we can contact you for more information, please provide your email. </p>
+<p>If we can contact you for more information, please provide your email </p>
 <ul>
 <li>Contact info</li>
 </ul>
 </li>
 <li>
-<p>Add questions specific to your Tool/App</p>
+<p>Add questions specific to your Project</p>
 </li>
 </ul>
 <hr />
-<h4 id="usablity-testing-interview">Usablity Testing Interview</h4>
+<h4 id="usability-testing-interview">Usability Testing Interview</h4>
 <ul>
 <li>Get feedback by asking</li>
-<li>Do prior to launch or release of major version changes</li>
+<li>Do before launch or release of major version changes</li>
 <li>Good Resources:<ul>
 <li><a href="https://uxstudioteam.com/ux-blog/usability-testing/">Usability Testing: How to Do It &amp; Its Benefits for Business</a></li>
 </ul>
@@ -213,11 +213,11 @@
 </ul>
 <h6 id="what-to-use-usability-testing-for">What to use usability testing for:</h6>
 <ul>
-<li>Identifying main issues with usabbility</li>
+<li>Identifying main issues with usability</li>
 <li>Checking if users understand the steps for a task </li>
-<li>Determin if the navigation works for the user</li>
-<li>Observing how easily and quickly task can be preformed</li>
-<li>Do potiential end users understand te value proposition of the Tool/App</li>
+<li>Determine if the navigation works for the user</li>
+<li>Observing how easily and quickly tasks can be preformed</li>
+<li>Do potential end users understand the value proposition of the Project</li>
 </ul>
 <h5 id="steps-for-conducting-usability-research">Steps For Conducting Usability Research</h5>
 <p>Summarized from <a href="https://uxstudioteam.com/ux-blog/usability-testing/">Usability Testing: How to Do It &amp; Its Benefits for Business</a></p>
@@ -225,17 +225,17 @@
 <ul>
 <li>Define what you want to learn </li>
 <li>Define a plan and create a script</li>
-<li>What are the key questions you have about Tool/App</li>
+<li>What are the key questions you have about Project</li>
 <li>Limit to 1 or 2 key questions</li>
 <li>What task(s) could the end-user perform that would help answer the key questions</li>
 <li>Write a script to use during testing</li>
-<li>Goood Resources:<ul>
+<li>Good Resources:<ul>
 <li><a href="http://sensible.com/downloads/test-script-web.pdf">Steve Krug’s usability testing script template</a></li>
-<li><a href="https://about.gitlab.com/handbook/engineering/ux/ux-research-training/writing-usability-testing-script/">Gitlab’s advice about usability testing script</a></li>
-<li><a href="https://docs.google.com/document/d/1_5Qu2JR9QE5LE6cK4eq9yJs-nXv2rlWWifcjacaiWdI/edit">Gitlab’s usability testing template script</a>.</li>
+<li><a href="https://about.gitlab.com/handbook/engineering/ux/ux-research-training/writing-usability-testing-script/">GitLab’s advice about usability testing script</a></li>
+<li><a href="https://docs.google.com/document/d/1_5Qu2JR9QE5LE6cK4eq9yJs-nXv2rlWWifcjacaiWdI/edit">GitLab’s usability testing template script</a>.</li>
 </ul>
 </li>
-<li>Pilot your test with Team/Friends/Colleagues</li>
+<li>Pilot your test with Team/Friends/Colleagues.</li>
 </ul>
 <h6 id="step-2-prepare-for-the-testing-session">Step 2 - Prepare For The Testing Session</h6>
 <ul>
@@ -247,14 +247,14 @@
 <li>Set up a feedback form</li>
 <li>Word of mouth ask around</li>
 <li>Advertising on Twitter, LinkedIn, or some other social media platform</li>
-<li><a href="https://calendly.com/">Calendly</a> useful tool for scheduling usability testing sessions</li>
+<li><a href="https://calendly.com/">Calendly</a> helpful tool for scheduling usability testing sessions</li>
 </ul>
 <h6 id="step-4-run-the-test">Step 4 - Run the test!</h6>
 <ul>
-<li>After all, the prep is done and users scheduled</li>
+<li>After all, the prep is done, and users are scheduled</li>
 <li>Ask if they are ok with the session being recorded (if you would like that)</li>
 <li>Never forget the point from Csontos: <ul>
-<li>'Assure your participant that they shoulder no blame. Never let the participants helping you with their valuable feedback feel frustrated '</li>
+<li>'Assure your participant that they shoulder no blame. Never let the participants helping you with their valuable feedback feel frustrated'.  </li>
 </ul>
 </li>
 </ul>
