--- a/site/Template - Reference Guide/index.html
+++ b/site/Template - Reference Guide/index.html
@@ -122,12 +122,12 @@
 <li>Is searchable or at least visually easily able to be scanned</li>
 <li>All items are described in clear language, no-jargon language</li>
 <li>Options and defaults are explained and linked to more information where appropriate</li>
-<li>Think of as a dictionary/Cookbook for Prooject</li>
+<li>Think of as a dictionary/Cookbook for Project</li>
 <li>Meant to be easily searchable not to be read front to back</li>
 <li>Try to make terms searchable</li>
 <li>Try to make it easy to scan</li>
 <li>Is every single thing covered?<ul>
-<li>Terms</li>
+<li>Terms  </li>
 <li>Functions</li>
 <li>Arguments</li>
 <li>Parameters</li>
@@ -141,7 +141,7 @@
 <li>tells how relates to other items link to that item when possible</li>
 <li>what are the inputs and when are these inputs needed</li>
 <li>what are the defaults</li>
-<li>show usage in context I.e. show the code</li>
+<li>show usage in context i.e., show the code</li>
 <li>avoid jargon</li>
 </ul>
 </li>
@@ -152,14 +152,14 @@
 </ul>
 </li>
 <li>Data Formats Defined<ul>
-<li>Prooject should use data formats that are common</li>
+<li>Project should use data formats that are common</li>
 <li>If using non-standard data formats then the document needs to explain the specific requirements <ul>
 <li>Include files for positive/negative/example</li>
 <li>Have a tool that the end-user can convert the standard format into your format, even better have this be part of the Project</li>
 </ul>
 </li>
 <li>Good Example:<ul>
-<li><a href="https://www.gsea-msigdb.org/gsea/doc/GSEAUserGuideTEXT.htm#_Loading_Data">GSEA has great descriptions of their data formats</a> with examples of what the data formats look like</li>
+<li><a href="https://www.gsea-msigdb.org/gsea/doc/GSEAUserGuideTEXT.htm#_Loading_Data">GSEA has great descriptions of their data formats</a> with examples of what the data formats look like.</li>
 </ul>
 </li>
 </ul>
@@ -174,7 +174,7 @@
 <li>Any additional datasets or items included in the package are documented</li>
 <li>Any input file formats are described (example file format included is ideal)</li>
 <li>Any output file formats are described</li>
-<li>If help is command line package then make sure what command needs to be used ie --help</li>
+<li>If help is command line package then make sure what command needs to be used i.e. --help</li>
 </ul>
 <hr />
 <h2 id="gui-tool-items">GUI Tool Items</h2>
@@ -185,13 +185,13 @@
 <li>Any output file formats are described</li>
 </ul>
 <hr />
-<h2 id="cheatsheet-ideas">Cheatsheet ideas:</h2>
-<p>For inspiration and examples of nice cheatsheets, take a look through <a href="https://www.rstudio.com/resources/cheatsheets/">RStudio's cheatsheets</a></p>
-<p>If you use Overleaf, there are <a href="https://www.overleaf.com/gallery/tagged/cheat-sheet">template cheatsheets you can use here</a>.</p>
+<h2 id="cheat-sheet-ideas">Cheat Sheet ideas:</h2>
+<p>For inspiration and examples of nice cheat sheets, take a look through <a href="https://www.rstudio.com/resources/cheatsheets/">RStudio's cheat sheets</a></p>
+<p>If you use Overleaf, there are <a href="https://www.overleaf.com/gallery/tagged/cheat-sheet">template cheat sheets you can use here</a>.</p>
 <hr />
-<h2 id="accessiblity">Accessiblity</h2>
+<h2 id="accessibility">Accessibility</h2>
 <ul>
-<li><a href="../Template%20-%20Accessibility%20Information/">Acccessiblity</a></li>
+<li><a href="Template — Accessibility Information.md">Accessibility</a></li>
 </ul>
 <hr />
 <h2 id="good-examples">Good Examples</h2>
