--- a/site/Template - Release Notes/index.html
+++ b/site/Template - Release Notes/index.html
@@ -122,8 +122,8 @@
 <li>Options:<ul>
 <li>All updates on one page or </li>
 <li>Single page for each update linked back to this page</li>
-<li>If doing multiple pages for each update - do you also want to show this in the navigation page - mkdocs.yml found in the root directory. <ul>
-<li>see the about page template - team section for an example how to add the information into the navigation and keeping everything on one page</li>
+<li>If doing multiple pages for each update — do you also want to show this in the navigation page — mkdocs.yml found in the root directory. <ul>
+<li>See the about page template — team section for an example how to add the information into the navigation and keeping everything on one page.</li>
 </ul>
 </li>
 </ul>
