--- a/site/index.html
+++ b/site/index.html
@@ -114,7 +114,7 @@
                 <h1 align="center">Project Design: Help Files Template</h1>
 
 <hr />
-<p>This page is the first page for your end-users.  It is similar to a landing page.  Use it to provide information on what your Project does Why it is an awesome project, and links to help documentation such as <a href="Template%20-%20Getting%20Started/">Getting Started</a>, <a href="Template%20-%20How%20To/">How To</a>, and <a href="Template%20-%20Reference%20Guide/">Reference Guide</a> Pages.</p>
+<p>This page is the first page for your end-users.  It is similar to a landing page.  Use it to provide information on what your Project does Why it is an awesome project, and links to help documentation such as <a href="Template — Getting Started.md">Getting Started</a>, <a href="Template — How To.md">How To</a>, and <a href="Template%20-%20Reference%20Guide/">Reference Guide</a> Pages.</p>
 <p>This document is a template git repo that will allow for customization for your own Project End User Documentation.  This concept is influenced/inspired by <a href="https://jhudatascience.org/Documentation_and_Usability/">The Documentation and Usability course</a>, which is a part of <a href="https://www.itcrtraining.org/courses">The Informatics Technology for Cancer Research (ITCR) Education Resource training series</a>.</p>
 <hr />
 <h6 id="checklist-for-this-section"><em>Checklist For This Section:</em></h6>
@@ -123,13 +123,13 @@
 <li>The “why” of this Project is obvious on the main page</li>
 <li>The end user will be able to know from the Why if they need/ want your Tool/App</li>
 <li>Says what need the Project fulfills</li>
-<li>Indicates what problem Projecct solves</li>
+<li>Indicates what problem Project solves</li>
 <li>Who is your Project for</li>
-<li>Tagline of Project purpose brief <a href="https://theYvonne.com/blog/secret-to-success-in-8-words">Use this as a quide</a></li>
+<li>Tagline of Project purpose brief <a href="https://theYvonne.com/blog/secret-to-success-in-8-words">Use this as a guide</a></li>
 <li>Summary of Project purpose brief</li>
 <li>Avoid jargon</li>
 <li>Example of Good Why<br />
-        - Gene Set Enrichment Analysis (GSEA) is a computational method that determines whether and a priori-defined set of genes shows statistically significant, concordant differences between two biological states (e.g. phenotypes).<br />
+        - Gene Set Enrichment Analysis (GSEA) is a computational method that determines whether and a priori-defined set of genes shows statistically significant, concordant differences between two biological states (i.e., phenotypes).<br />
         - Salmon is a tool for wicked-fast transcript quantification from RNA-seq data. It requires a set of target transcripts (either from a reference or de-novo assembly) to quantify.  </li>
 </ul>
 <hr />
@@ -141,7 +141,7 @@
 </ul>
 <hr />
 <h2 id="understanding-your-user-community">Understanding Your User Community</h2>
-<p>Understaning your User Community allows you to understand and meet their needs</p>
+<p>Understanding your User Community allows you to understand and meet their needs</p>
 <ul>
 <li>Write down what you know (or think you know) </li>
 <li>Identify any knowledge gaps you might have about your user community</li>
@@ -152,13 +152,13 @@
 <hr />
 <h2 id="using-the-project">Using The Project</h2>
 <ul>
-<li><a href="Template%20-%20Getting%20Started/">Getting Started Guide</a></li>
-<li><a href="Template%20-%20How%20To/">How To Reference</a></li>
-<li><a href="Template%20-%20Reference%20Guide/">Reference Guide</a></li>
-<li><a href="Template%20-%20FAQ/">FAQ</a></li>
-<li><a href="Template%20-%20Accessibility%20Information/">Acessibility Information</a></li>
-<li><a href="Template%20-%20Release%20Notes/">Release Note</a></li>
-<li><a href="Template%20-%20Feedback/">Feedback</a> <ul>
+<li><a href="Template — Getting Started.md">Getting Started Guide</a></li>
+<li><a href="Template — How To.md">How To Reference</a></li>
+<li><a href="Template — Reference Guide.md">Reference Guide</a></li>
+<li><a href="Template — FAQ.md">FAQ</a></li>
+<li><a href="Template — Accessibility Information.md">Accessibility Information</a></li>
+<li><a href="Template — Release Notes.md">Release Note</a></li>
+<li><a href="Template — Feedback.md">Feedback</a> <ul>
 <li>note could also link directly to feedback form</li>
 </ul>
 </li>
@@ -216,5 +216,5 @@
 
 <!--
 MkDocs version : 1.3.0
-Build Date UTC : 2022-07-20 02:43:50.083517+00:00
+Build Date UTC : 2022-07-22 14:11:55.588899+00:00
 -->
