--- a/site/Template - Code Documentation/index.html
+++ b/site/Template - Code Documentation/index.html
@@ -126,13 +126,13 @@
 <hr />
 <h2 id="general">General</h2>
 <ul>
-<li>Do you want to share source code</li>
-<li>Do you want to say what langauge was useed in the projeect's creation</li>
+<li>Do you want to share the source code</li>
+<li>Do you want to say what language was used in the project's creation</li>
 </ul>
 <hr />
 <h2 id="link-to-code">Link To Code</h2>
 <ul>
-<li>Add link to Github Rep</li>
+<li>Add a link to GitHub Repo</li>
 </ul>
 <hr />
 <h2 id="how-to-contribute">How To Contribute</h2>
@@ -142,12 +142,12 @@
 <hr />
 <h2 id="feedback">Feedback</h2>
 <ul>
-<li>Link to feedback page</li>
+<li>Link to a feedback page</li>
 </ul>
 <hr />
-<h2 id="liscence">Liscence</h2>
+<h2 id="license">License</h2>
 <ul>
-<li>How is code liscenced</li>
+<li>How is code licensed</li>
 </ul>
 <hr />
 <p><em>Add Your Contact Information</em>
