--- a/site/Template - Getting Started/index.html
+++ b/site/Template - Getting Started/index.html
@@ -122,15 +122,16 @@
 <li>Provides the user with the introductory concepts of the Project</li>
 <li>Has clear steps for installation </li>
 <li>Dependencies are made clear</li>
-<li>Directs the user to the <a href="Template — How To.md">How-to Examples </a>section</li>
+<li>Directs the user to the <a href="../Template%20-%20How%20To/">How-to Examples </a>section</li>
 <li>Added images and icons so those who is a familiar with a different language can still follow</li>
 <li>Added videos </li>
 <li>Code is presented so that it can be copy and pasted</li>
 <li>Shows how to get quick results</li>
 <li>List of system requirements listed </li>
-<li><a href="Template — Accessibility Information.md">Confirm inclusivity in selections</a></li>
+<li><a href="../Template%20-%20Accessibility%20Information/">Confirm inclusivity in the project's approach</a></li>
 <li>Confirm consistently using style guidelines</li>
-<li><a href="Template — Accessibility Information.md">Accessibility Usage Implemented</a></li>
+<li><a href="../Template%20-%20Accessibility%20Information/">Accessibility Usage Implemented</a></li>
+<li>Getting Started is for new users</li>
 <li>Tells How to
       Install Tools and Dependencies
       Run basic analysis with the Project
@@ -168,12 +169,13 @@ We'll need to run this command:</p>
 <p>Show some really cool output result</p>
 <hr />
 <h2 id="codebook-how-to-examples">Codebook - How-to Examples</h2>
-<p>Link to a how to page that takes End User to next step
-- <a href="../Template%20-%20How%20To/">How to Page Within This Document</a>
-- Nice Example: <a href="https://docs.qiime2.org/2022.2/getting-started/">Qiime2 Getting Started</a></p>
+<p>Link to a how to page that takes End User to next step<br />
+- <a href="../Template%20-%20How%20To/">Link For How To Template</a><br />
+- Nice Example: 
+    - <a href="https://docs.qiime2.org/2022.2/getting-started/">Qiime2 Getting Started</a>  </p>
 <h2 id="accessibility">Accessibility</h2>
 <ul>
-<li><a href="Template — Accessibility Information.md">Accessibility Reference</a></li>
+<li><a href="../Template%20-%20Accessibility%20Information/">Accessibility Reference</a></li>
 </ul>
 <hr />
 <p><em>Add Your Contact Information</em>
