--- a/site/Template - How To/index.html
+++ b/site/Template - How To/index.html
@@ -124,7 +124,7 @@
 <li>Links to helpful background knowledge resources are included</li>
 <li>Paste-able or directly runnable code is given and can be run as-is</li>
 <li>Demonstrates a <em>reproducible</em> example</li>
-<li>An example dataset needed is provided and introduced</li>
+<li>An example dataset that needed is provided and introduced</li>
 <li>No additional packages &amp; software is required beyond what is listed on the <a href="../Template%20-%20Getting%20Started/">Getting Started</a> Page</li>
 <li>Demonstrates step-by-step the most common users for your Project</li>
 <li>Example code write with teaching in mind</li>
@@ -145,23 +145,28 @@
 <ul>
 <li>If data is needed to run the example, provide it</li>
 <li>If the data needs to be in a certain format make sure this format is listed and defined </li>
-<li>Add a converting tool whenever possible</li>
+<li>Add a data format converting tool whenever possible</li>
 </ul>
 <h5 id="example-code-goal-illustrates-how-to-use-the-project">Example Code Goal Illustrates How To Use The Project</h5>
 <ul>
-<li>Example Code is written to prioritize clarity over brevity</li>
+<li>Example Code: <ul>
+<li>Prioritize clarity over brevity</li>
 <li>Should have comments</li>
+</ul>
+</li>
 <li>Don't assume end-users understand conventions explain/define them</li>
 <li>Should model best practices</li>
 <li>Be consistence with Coding Style and Conventions</li>
 <li>Try to limit needing other packages and dependencies<ul>
-<li>In a package is required, evaluate if it should automatically install</li>
+<li>For a required package, evaluate if it should automatically install</li>
 </ul>
 </li>
 <li>Review document at the level of a beginner</li>
+<li>How To Sections are geared toward intermediate user who want to know more<ul>
 <li>Getting Started is for new users</li>
-<li>How To Sections are geared toward intermediate user who want to know more</li>
-<li>Can move someone from moderate interest to raving fan</li>
+</ul>
+</li>
+<li>Good How To Documentation can move someone from moderate interest to raving fan</li>
 <li>Create examples like one would recipes in a cookbook</li>
 <li>Used to show off best use cases for the Project</li>
 </ul>
